syntax = "proto3";

package registry;
option go_package = "./proto";


service Registry {
  rpc register (Rinfo) returns (Ranswer) {}
  rpc startGroup (RequestData) returns (MGroup) {}
  rpc ready (RequestData) returns (MGroup) {}
  rpc closeGroup (RequestData) returns (MGroup) {}
  rpc getStatus (MulticastId) returns (MGroup) {}
}

enum MulticastType {
  BMULTICAST = 0;
  TOCMULTICAST = 1;
  TODMULTICAST = 2;
  COMULTICAST = 3;
}

message Rinfo {
  string multicastId = 1;
  MulticastType multicastType = 2;
  uint32 clientPort = 3;
}

message Ranswer {
  string clientId = 1;
  MGroup groupInfo = 2;
}

message MGroup {
  string multicastId = 1;
  MulticastType multicastType = 2;
  Status status = 3;
  uint64 readyMembers = 4;
  map<string, MemberInfo>  members = 5;
}
enum Status {
  OPENING = 0;
  STARTING = 1;
  ACTIVE = 2;
  CLOSING = 3;
  CLOSED = 4;
}
message MulticastId {
  string multicastId = 1;
}

message RequestData {
  string multicastId = 1;
  string mId = 2;
}

message MemberInfo {
  string id = 1;
  string address = 2;
  bool ready = 3;
}

message Empty {

}